--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@ The clock is <strong>ticking</strong>...</span></span></p>
 
 <p style="text-align: center;">&nbsp;</p>
 
-<p style="text-align: center;"><span style="color:#FF0000;"><span style="font-family:courier new,courier,monospace;">Come back for further updates.</span></span></p>
+<p style="text-align: center;"><span style="color:#FF0000;"><span style="font-family:courier new,courier,monospace;">Come back for more updates soon.</span></span></p>
 </body>
 </html>
