--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 
 <html>
 <head>
+
 	<title>The Council of 8</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
+
 <body style="background-color:black;">
+
 <p style="text-align: center;"><br />
 <span style="font-family:courier new,courier,monospace;"><strong><span style="color:#FF0000;"><span style="font-size:144px;">8</span></span></strong></span></p>
 
@@ -19,6 +24,7 @@ The clock is <strong>ticking</strong>...</span></span></p>
 
 <p style="text-align: center;">&nbsp;</p>
 
-<p style="text-align: center;"><span style="color:#FF0000;"><span style="font-family:courier new,courier,monospace;">Come back for more updates soon.</span></span></p>
+<p style="text-align: center;"><span style="color:#FF0000;"><span style="font-family:courier new,courier,monospace;">Come back for further updates.</span></span></p>
+
 </body>
 </html>
