--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 
 <html>
 <head>
-
 	<title>The Council of 8</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 </head>
-
 <body style="background-color:black;">
 
-<p style="text-align: center;"><br />
-<span style="font-family:courier new,courier,monospace;"><strong><span style="color:#FF0000;"><span style="font-size:144px;">8</span></span></strong></span></p>
+<span style="text-align: center;font-family:courier new,courier,monospace;color:red;">
+<p><br />
+<strong><span style="font-size:144px;">8</span></strong>
 
-<p style="text-align: center;"><strong><span style="color:#FF0000;"><span style="font-family:courier new,courier,monospace;">Chance Wilkins,</span></span></strong></p>
+<p><strong>Chance Wilkins,</strong></p>
 
-<p style="text-align: center;"><span style="color:#FF0000;"><span style="font-family:courier new,courier,monospace;">You have gone unpunished far too long.<br />
-The clock is <strong>ticking</strong>...</span></span></p>
+<p>You have gone unpunished far too long.<br />
+The clock is <strong>ticking</strong>...</p>
 
-<p style="text-align: center;"><span style="color:#FF0000;"><span style="font-family:courier new,courier,monospace;">Repent now or <strong>nothing</strong> will stop what is coming.</span></span></p>
+<p>Repent now or <strong>nothing</strong> will stop what is coming.</p>
 
-<p style="text-align: center;"><span style="color:#FF0000;"><span style="font-family:courier new,courier,monospace;"><strong>You have been warned</strong>.</span></span></p>
+<p><strong>You have been warned</strong>.</p>
 
-<p style="text-align: center;">&nbsp;</p>
+<p>&nbsp;</p>
 
-<p style="text-align: center;"><span style="color:#FF0000;"><span style="font-family:courier new,courier,monospace;">Come back for further updates.</span></span></p>
-
+<p>Come back for further updates.</p>
+</span>
 </body>
 </html>
+
+<!-- Last updated: 5/10/2024 7:07:20 PM EDT -->
