--- a/index.html
+++ b/index.html
@@ -1,30 +1,67 @@
-<!--Repent or suffer.-->
+<!--You are weak. You are frail. You are an ugly little boy.-->
 
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<title>The Council of 8</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<style>
+
+	.anim {
+		animation: rot 120s 30s infinite;
+	}
+
+	@keyframes rot {
+		0% {
+    		transform: rotate(0deg)
+		}
+		1.56%, 25% {
+    		transform: rotate(90deg)
+		}
+		26.56%, 50% {
+    		transform: rotate(180deg)
+		}
+		51.56%, 75% {
+    		transform: rotate(270deg)
+		}
+		76.56%, 100% {
+    		transform: rotate(360deg)
+		}
+	}
+
+</style>
 <body style="background-color:black;">
 
 <span style="text-align: center;font-family:courier new,courier,monospace;color:red;">
 <p><br />
-<strong><span style="font-size:144px;">8</span></strong>
+<div class="anim"><strong><span style="font-size:144px;">8</span></strong></div>
 
 <p><strong>Chance Wilkins,</strong></p>
 
-<p>You have gone unpunished far too long.<br />
-The clock is <strong>ticking</strong>...</p>
+<p><strong>You are nothing</strong> but a grotesque, <strong>weak, pedophile</strong> midget with the mind of a <strong>child</strong>.</p>
 
-<p>Repent now or <strong>nothing</strong> will stop what is coming.</p>
+<p>You <strong>can't</strong> hurt anyone but the extremely invalid and your <strong>grandmother</strong>.</p>
 
-<p><strong>You have been warned</strong>.</p>
+<p><strong>Pretend</strong> to be tough all you want. <strong>Everyone</strong> knows the real <a href="https://youtu.be/N0Pznv0D0OU?t=58" target="_blank" rel="noopener noreferrer"><strong>truth</strong></a>.</p>
 
 <p>&nbsp;</p>
 
-<p>Come back for further updates.</p>
+<p><strong>The Council</strong> will not lose. <strong>The Council</strong> will be here forever.</p>
+
+<p><strong>The Council</strong> is more than just <strong>8</strong>.</p>
+
+<p>&nbsp;</p>
+
+<p><strong>The Council</strong> is <strong>INFINITE.</strong></p>
+
+<p>&nbsp;</p>
+
+<p>&nbsp;</p>
+
+<p>Stay tuned.</p>
 </span>
 </body>
 </html>
 
-<!-- Last updated: 5/10/2024 7:07:20 PM EDT -->
+<!-- Last updated: 5/11/2024 12:12:12 PM EDT -->
