--- a/index.html
+++ b/index.html
@@ -47,15 +47,13 @@
 
 <p>&nbsp;</p>
 
-<p><strong>The Council</strong> will not lose. <strong>The Council</strong> will be here forever.</p>
+<p><strong>The Council</strong> is more than <strong>8</strong>.</p>
 
-<p><strong>The Council</strong> is more than just <strong>8</strong>.</p>
+<p><strong>The Council</strong> is more than <strong>43</strong>.</p>
 
 <p>&nbsp;</p>
 
 <p><strong>The Council</strong> is <strong>INFINITE.</strong></p>
-
-<p>&nbsp;</p>
 
 <p>&nbsp;</p>
 
