--- a/index.html
+++ b/index.html
@@ -33,32 +33,37 @@
 </style>
 <body style="background-color:black;">
 
-<span style="text-align: center;font-family:courier new,courier,monospace;color:red;">
-<p><br />
-<div class="anim"><strong><span style="font-size:144px;">8</span></strong></div>
+<div>
+	<span style="text-align: center;font-family:courier new,courier,monospace;color:red;">
+	<p><br />
+	<div class="anim"><strong><span style="font-size:144px;">8</span></strong></div>
+	
+	<p><strong>Chance Wilkins,</strong></p>
+	
+	<p><strong>You are nothing</strong> but a grotesque, <strong>weak, pedophile</strong> midget with the mind of a <strong>child</strong>.</p>
+	
+	<p>You <strong>can't</strong> hurt anyone but the extremely invalid and your <strong>grandmother</strong>.</p>
+	
+	<p><strong>Pretend</strong> to be tough all you want. <strong>Everyone</strong> knows the real <a href="https://youtu.be/N0Pznv0D0OU?t=58" target="_blank" rel="noopener noreferrer"><strong>truth</strong></a>.</p>
 
-<p><strong>Chance Wilkins,</strong></p>
+	<p>We want nothing but the <strong>worst</strong> for you.</p>
+	
+	<p>&nbsp;</p>
+	
+	<p><strong>The Council</strong> is more than <strong>8</strong>.</p>
+	
+	<p><strong>The Council</strong> is more than <strong>43</strong>.</p>
+	
+	<p>&nbsp;</p>
+	
+	<p><strong>The Council</strong> is <strong>INFINITE.</strong></p>
+	
+	<p>&nbsp;</p>
+	
+	<p>Stay tuned.</p>
+	</span>
+</div>
 
-<p><strong>You are nothing</strong> but a grotesque, <strong>weak, pedophile</strong> midget with the mind of a <strong>child</strong>.</p>
-
-<p>You <strong>can't</strong> hurt anyone but the extremely invalid and your <strong>grandmother</strong>.</p>
-
-<p><strong>Pretend</strong> to be tough all you want. <strong>Everyone</strong> knows the real <a href="https://youtu.be/N0Pznv0D0OU?t=58" target="_blank" rel="noopener noreferrer"><strong>truth</strong></a>.</p>
-
-<p>&nbsp;</p>
-
-<p><strong>The Council</strong> is more than <strong>8</strong>.</p>
-
-<p><strong>The Council</strong> is more than <strong>43</strong>.</p>
-
-<p>&nbsp;</p>
-
-<p><strong>The Council</strong> is <strong>INFINITE.</strong></p>
-
-<p>&nbsp;</p>
-
-<p>Stay tuned.</p>
-</span>
 </body>
 </html>
 
