--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>The Council of 8</title>
+	<title>Official Correspondence from The Council of 8</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <style>
