--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--You are weak. You are frail. You are an ugly little boy.-->
+<!--You are weak. You are frail. You are nothing and will always be nothing.-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -38,33 +38,27 @@
 	<p><br />
 	<div class="anim"><strong><span style="font-size:144px;">8</span></strong></div>
 	
-	<p><strong>Chance Wilkins,</strong></p>
-	
-	<p><strong>You are nothing</strong> but a grotesque, <strong>weak, pedophile</strong> midget with the mind of a <strong>child</strong>.</p>
-	
-	<p>You <strong>can't</strong> hurt anyone but the extremely invalid and your <strong>grandmother</strong>.</p>
-	
-	<p><strong>Pretend</strong> to be tough all you want. <strong>Everyone</strong> knows the real <a href="https://youtu.be/N0Pznv0D0OU?t=58" target="_blank" rel="noopener noreferrer"><strong>truth</strong></a>.</p>
+	<p><strong>MMUSIC BIZ MARTY ALWAYS WINS!</strong></p>
 
-	<p>We want nothing but the <strong>worst</strong> for you.</p>
-	
 	<p>&nbsp;</p>
-	
-	<p><strong>The Council</strong> is more than <strong>8</strong>.</p>
-	
-	<p><strong>The Council</strong> is more than <strong>43</strong>.</p>
-	
+
+	<p><strong>Chance Wilkins</strong> the <strong>WEAK BUM</strong> that fucks his step-dad <strong>ALWAYS LOSES</strong>!</p>
+
+	<p><strong>THIS ISN'T THE END LITTLE FAGGOT PUSSY BOY.</strong></p>
+
 	<p>&nbsp;</p>
+
+	<p><strong>The Council</strong> is more than <strong>8</strong>...</p>
 	
 	<p><strong>The Council</strong> is <strong>INFINITE.</strong></p>
 	
 	<p>&nbsp;</p>
 	
-	<p>Stay tuned.</p>
+	<p>More to come soon...</p>
 	</span>
 </div>
 
 </body>
 </html>
 
-<!-- Last updated: 5/11/2024 12:12:12 PM EDT -->
+<!-- Last updated: 5/13/2024 10:45:03 PM EDT -->
