--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<p><br />
 	<div class="anim"><strong><span style="font-size:144px;">8</span></strong></div>
 	
-	<p><strong>MMUSIC BIZ MARTY ALWAYS WINS!</strong></p>
+	<p><strong>MUSIC BIZ MARTY ALWAYS WINS!</strong></p>
 
 	<p>&nbsp;</p>
 
