--- a/index.html
+++ b/index.html
@@ -33,32 +33,40 @@
 </style>
 <body style="background-color:black;">
 
-<div>
-	<span style="text-align: center;font-family:courier new,courier,monospace;color:red;">
-	<p><br />
-	<div class="anim"><strong><span style="font-size:144px;">8</span></strong></div>
+<span style="text-align: center;font-family:courier new,courier,monospace;color:red;">
+<p><br />
+<div class="anim"><strong><span style="font-size:144px;">8</span></strong></div>
 	
-	<p><strong>MUSIC BIZ MARTY ALWAYS WINS!</strong></p>
+<p><strong>Chance Wilkins,</strong></p>
 
-	<p>&nbsp;</p>
+<p>&nbsp;</p>
 
-	<p><strong>Chance Wilkins</strong> the <strong>WEAK BUM</strong> that fucks his step-dad <strong>ALWAYS LOSES</strong>!</p>
+<p>You are still under the <strong>delusion</strong> that you have any say over your <strong>life</strong>yi=o-0`.</p>
 
-	<p><strong>THIS ISN'T THE END LITTLE FAGGOT PUSSY BOY.</strong></p>
+<p>You are <strong>forgetting</strong> you are a <strong>weak</strong> little <strong>coward</strong>. A <strong>nothing</strong>.</p>
 
-	<p>&nbsp;</p>
+<p><strong>You</strong> seem to have things <strong>backwards.</strong></p>
 
-	<p><strong>The Council</strong> is more than <strong>8</strong>...</p>
+<p>&nbsp;</p>
+
+<p>You <strong>will</strong> infact be <strong>homeless.</strong></p>
+
+<p>It is <strong>you</strong> that will be <strong>hunted</strong> down like a <strong>dog.</strong></p>
+
+<p>There is <strong>nothing</strong> you can do to <strong>stop</strong> it.</p>
+
+<p>&nbsp;</p>
+
+<p><strong>The Council</strong> is more than <strong>8</strong>...</p>
 	
-	<p><strong>The Council</strong> is <strong>INFINITE.</strong></p>
+<p><strong>The Council</strong> is <strong>INFINITE.</strong></p>
 	
-	<p>&nbsp;</p>
+<p>&nbsp;</p>
 	
-	<p>More to come soon...</p>
-	</span>
-</div>
+<p>More to come soon...</p>
+</span>
 
 </body>
 </html>
 
-<!-- Last updated: 5/13/2024 10:45:03 PM EDT -->
+<!-- Last updated: 5/17/2024 05:23:36 PM EDT -->
