--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <p>&nbsp;</p>
 
-<p>You are still under the <strong>delusion</strong> that you have any say over your <strong>life</strong>yi=o-0`.</p>
+<p>You are still under the <strong>delusion</strong> that you have any say over your <strong>life</strong>.</p>
 
 <p>You are <strong>forgetting</strong> you are a <strong>weak</strong> little <strong>coward</strong>. A <strong>nothing</strong>.</p>
 
@@ -57,7 +57,7 @@
 
 <p>&nbsp;</p>
 
-<p><strong>The Council</strong> is more than <strong>8</strong>...</p>
+<p><strong>The Council</strong> is more than <strong>8</strong>.</p>
 	
 <p><strong>The Council</strong> is <strong>INFINITE.</strong></p>
 	
